--- a/src/less/block/product.less
+++ b/src/less/block/product.less
@@ -6,25 +6,30 @@
     flex-wrap: wrap;
     padding: 15px 20px;
     padding-top: 20px;
-    background-color: rgba(255, 218, 160, 60%);
-    border: 1px dashed @bg-brown;
-    border-radius: 10px;
-    color: #53370a;
+  background-color: rgba(255, 218, 160, 60%);
+  border: 1px dashed @bg-brown;
+  border-radius: 10px;
+  color: #53370a;
 
-    &:hover {
-        background-color: #ffdaa0;
-    }
+  &:hover {
+    background-color: #ffdaa0;
+  }
+}
+
+.product__wrapper {
+  display: block;
+  width: 100%;
 }
 
 .product--stock {
-    position: relative;
+  position: relative;
 
-    &::before {
-        content: "";
-        width: 148px;
-        height: 32px;
-        position: absolute;
-        top: -16px;
+  &::before {
+    content: "";
+    width: 148px;
+    height: 32px;
+    position: absolute;
+    top: -16px;
         left: 50%;
         transform: translateX(-50%);
         background-image: url("/img/stock.png");
@@ -81,21 +86,24 @@
 }
 
 .product__image-wrapper {
-    margin: 0 auto;
-    margin-bottom: 15px;
-    display: flex;
-    height: 150px;
-    width: 150px;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  display: flex;
+  height: 180px;
+  width: 180px;
+  border-radius: 50%;
+  border: 1px dashed @bg-border-brown;
+  overflow: hidden;
 
-    & img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+  & img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
-    & a {
-        margin: auto;
-    }
+  & a {
+    margin: auto;
+  }
 }
 
 .product__characteristic-list {
